logs/brightone-hangman.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/brightone_hangman'...
Compiling './lib/python3.5/site-packages/brightone_hangman/game.py'...
***   File "./lib/python3.5/site-packages/brightone_hangman/game.py", line 47
    print(f'The word was {self.word}, and you could get it in {self._best_guess(self.word)} guesses.',
                                                                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/brightone_hangman/man.py'...
***   File "./lib/python3.5/site-packages/brightone_hangman/man.py", line 50
    return f'''   ____
  |    |
  |    {l["head"]}
  |   {l["left_arm"]}{l["torso_upper"]}{l["right_arm"]}
  |    {l["torso_lower"]}
  |   {l["left_leg"]} {l["right_leg"]}
 _|_
|   |________
|            |
|____________|'''
                      
        
                  
                                                       
                         
                                      
    
             
              
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/brightone_hangman-0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
